feat: metatags and so on

--- a/packages/uniswap/src/i18n/locales/source/en-US.json
+++ b/packages/uniswap/src/i18n/locales/source/en-US.json
@@ -947,8 +947,8 @@
   "home.upsell.receive.description": "Fund your wallet by transferring crypto from another wallet or account",
   "home.upsell.receive.title": "Receive crypto",
   "home.warning.viewOnly": "This is a view-only wallet",
-  "interface.metatags.description": "Swap or provide liquidity on the Uniswap Protocol",
-  "interface.metatags.title": "Uniswap Interface",
+  "interface.metatags.description": "Put your unicorn assets to work.",
+  "interface.metatags.title": "Unicorn Credit",
   "landing.buildNextGen": "Build the next generation of open applications and tools.",
   "landing.connectWithUs": "Connect with us",
   "landing.devDocs": "Developer docs",
